Added media queries to make responsive

--- a/style.css
+++ b/style.css
@@ -97,8 +97,11 @@ textarea {
     margin-bottom: 0.125rem;
 }
 
+.project-description {
+    padding:   0 30px;
+}
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
 
   
     h1 {
@@ -121,6 +124,11 @@ textarea {
 
     .text {
         font-size: 0.8rem;
+    }
+
+    .project-description {
+        padding: 0;
+        text-align: center;
     }
 
     .rounded-social-buttons .social-button {
