--- a/style.css
+++ b/style.css
@@ -101,7 +101,14 @@ textarea {
     padding:   0 30px;
 }
 
-@media screen and (max-width: 800px) {
+.profile-image {
+
+    box-shadow:  0 0 4px rgba(0, 0, 0, 0.6);
+    width: 75%;
+    height: 100%;
+}
+
+@media screen and (max-width: 060px) {
 
   
     h1 {
@@ -129,6 +136,13 @@ textarea {
     .project-description {
         padding: 0;
         text-align: center;
+    }
+
+    .about-me {
+        display: flex;
+        justify-content: space-around;
+        align-items: stretch;
+        height: auto;
     }
 
     .rounded-social-buttons .social-button {
