--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ h2 {
     display: inline-block;
 }
 
+h3{
+    font-family: 'Quicksand',sans-serif; 
+    font-size: .8rem;
+    line-height: 1.5;
+    text-align: center;
+    font-weight: bolder;
+}
 .hero {
     background-color: rgb(41, 37, 37);
     text-align: center;
@@ -60,6 +67,10 @@ h2 {
     box-shadow: none;
     transition: all .3s ease;
    
+}
+
+.btn-outline-dark {
+    padding: auto;
 }
 
 textarea {
@@ -104,9 +115,11 @@ textarea {
 .profile-image {
 
     box-shadow:  0 0 4px rgba(0, 0, 0, 0.6);
-    width: 75%;
+    width: 100%;
     height: 100%;
 }
+
+
 
 @media screen and (max-width: 060px) {
 
