--- a/style.css
+++ b/style.css
@@ -119,6 +119,18 @@ textarea {
     height: 100%;
 }
 
+.content p {
+    line-height: 1.7em;
+    font-size: 14px;
+}
+
+.content h3{
+    font-weight: bold;
+    line-height: 1.1;
+    margin: 15px 0 0;
+
+}
+
 
 
 @media screen and (max-width: 060px) {
