--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@
 }
 
 body {
-    background: rgb(163, 158, 158);
+    background:  #fff;
 }
 
 h1 {
-    font-family: 'Quicksand', sans-serif;
-    color: rgb(241, 230, 230);
+font-family: var(--heading-font-family);
+    color: var(--branding-color);
     text-align: center;
     font-size: 3rem;
+    
 }
 
 h2 {
@@ -56,17 +57,23 @@ h3{
 .hero h4 {
     color: var(--secondary-color);
 }
-
-.hero btn-branding {
+.hero .btn-branding {
     border-radius: 4px;
-    color: rgb(179, 174, 174);
+    color: var(--secondary-color);
     font-size: 1rem;
     line-height: 1.5rem;
     padding: 10px 20px;
     margin-top: 80px;
     box-shadow: none;
-    transition: all .3s ease;
-   
+    transition: all 0.3s ease;
+}
+.hero .email-link {
+    text-decoration: none;
+        color: #888;
+        font-size: 15px;
+        text-align: center;
+        padding-top: 15px;
+
 }
 
 .btn-outline-dark {
