--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ textarea {
     padding-top: 30px;
 
 }
+
+.container-1{
+    padding-top: 40px;
+   padding-left: 40px;
+   padding-right: 40px;
+}
 .rounded-social-buttons {
     text-align: center;
 }
